2003-01-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkvnc.tcl: Updated to use namespaces, improve speed a bit,
	clean up code.

	* tkvnc.tcl: Initial import of tkvnc into CVS
	Original author is Greg Baker of the Institute for Open Systems
	Technologies, link at http://www.ifost.org.au/Software/.
