@@ -1,5 +1,8 @@
 2003-01-15  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* tkvnc.tcl (UpdateUI): Change 'all' bindings to ROOT to not
+	trigger key events when not over the main toplevel.
+
 	* tkvnc.tcl: Updated to use namespaces, improve speed a bit,
 	clean up code.
 
